Added secured authentication for API calls
