# static/swagger/specification/portfolioMgmt.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: DevOps RESTful Project
-  description: API for portfolio management, implemented for the NYU DevOps course
+  description: API for portfolio management, implemented for the NYU DevOps course. 
   version: "1.0"
 host: portfoliomgmt.mybluemix.net
 schemes:
@@ -15,6 +15,7 @@ paths:
     get:
       summary: All portfolios
       description:
+        IMPORTANT - Admin username is "admin" with password "admin_password".
         The portfolios endpoint returns all portfolios stored on the system.
         The response includes the user who owns the portfolio, the number of
         assets in the portfolio and the net asset value of the portfolio. In
@@ -41,6 +42,9 @@ paths:
               user:
                 type: string
                 default: "john"
+              password:
+                type: string
+                default: "12345"
       tags:
         - Portfolios
       responses:
